# tzwitter

./: .gitignore  deploy.sh  readme.md  simulate.sh
09_tzwitter_app/: .gitignore  deploy.sh  readme.md
09_tzwitter_app/app/: package.json
09_tzwitter_app/app/src/components/: Feed.tsx  FeedKind.tsx  Input.css  Menu.css  NumberOfTweets.css  Popup.css  ProfileHeader.tsx  TweetComponent.css  TweetComponent.tsx  menu.tsx  popup.tsx
09_tzwitter_app/app/src/containers/: Feed.tsx
09_tzwitter_app/app/src/lib/: account.ts  rollup.ts  tweet.ts  tzwitter.ts
09_tzwitter_app/app/src/pages/: account.tsx  feed.tsx  home.tsx  index.tsx  profile.tsx
09_tzwitter_app/app/src/pages/css/: index.css
09_tzwitter_app/kernel/: Cargo.toml  inputs.json
09_tzwitter_app/kernel/src/: lib.rs  stages.rs  storage.rs
09_tzwitter_app/kernel/src/core/: account.rs  error.rs  message.rs  public_key.rs  public_key_hash.rs  receipt.rs  tweet.rs
09_tzwitter_app/smart_contract/: dummy-fa2.jsligo
09_tzwitter_app/tezos_rollup_encoding/src/: contract.rs  dac.rs  inbox.rs
app/: config-overrides.js  package.json
app/src/: config.ts  index.tsx
app/src/components/: Feed.tsx  FeedHeader.css  FeedHeader.tsx  FeedKind.css  FeedKind.tsx  Input.css  Input.tsx  Menu.css  NumberOfTweets.css  NumberOfTweets.tsx  Popup.css  ProfileHeader.css  ProfileHeader.tsx  TweetComponent.css  TweetComponent.tsx  menu.tsx  popup.tsx
app/src/containers/: Feed.tsx  Layout.tsx  layout.css
app/src/lib/: account.ts  rollup.ts  tweet.ts  tzwitter.ts
app/src/pages/: account.tsx  feed.tsx  home.tsx  index.tsx  profile.tsx
app/src/pages/css/: index.css  profile.css
kernel/: Cargo.toml  inputs.json
kernel/src/: constants.rs  lib.rs  message.rs  stages.rs  storage.rs
kernel/src/core/: account.rs  error.rs  hash.rs  message.rs  mod.rs  nonce.rs  public_key.rs  public_key_hash.rs  signature.rs  tweet.rs
tezos_rollup_encoding/: Cargo.toml
tezos_rollup_encoding/src/: lib.rs  outbox.rs  public_key_hash.rs
