[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Let's use the last version of the SDK, todo: fix the version if it's an issue
host = { git = "https://gitlab.com/tezos/kernel/" } 
debug = { git = "https://gitlab.com/tezos/kernel/" }
kernel = {git = "https://gitlab.com/tezos/kernel/"}
mock_runtime = { git = "https://gitlab.com/tezos/kernel/" }
mock_host = { git = "https://gitlab.com/tezos/kernel/" }