[package]
name = "tzwitter-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Let's use the last version of the SDK, todo: fix the version if it's an issue
host = { git = "https://gitlab.com/tezos/kernel/" } 
debug = { git = "https://gitlab.com/tezos/kernel/" }
kernel = {git = "https://gitlab.com/tezos/kernel/"}
mock_runtime = { git = "https://gitlab.com/tezos/kernel/" }
mock_host = { git = "https://gitlab.com/tezos/kernel/" }

# To hash everything
crypto = { git = "https://github.com/trilitech/tezedge.git", branch = "master", default-features = false }
ed25519-compact = { version ="2.0", default-features = false }
serde = "1.0.152"
serde-json-wasm = "0.5.0"
